# face_dlib

./: CMakeLists.txt  dnn_export_face_chip.cpp  dnn_metric_learning_on_images_ex.cpp  dnn_mmod_face_detection_ex.cpp  face_detection_ex.cpp  face_detection_ex2.cpp  faces_detection_cnn.py
